2007-01-08  Marc Singer  <elf@cerise.buici.com>

	* 1.4.10.
		
	* src/drivers/drv-fis.c (deleted_entry): Replaced the
	end_of_table() checks with deleted_entry checks.  Really, we
	cannot be sure that we've seen the end of the table since a 0xff
	in the first byte indicates a deleted entry and we have to check
	for that first.  We previously thought that (u32)~0 was the end of
	the table, but we cannot now be sure.  Argh.

	* Applyied nas100d and dsmg600 patches as well as a slew of config
	file patches courtesy of rwhitby.

	* src/drivers/drv-nor-cfi.c (SWAP_ONE): Fixed the nor flash driver
	to properly write when in an endian mismatched mode.  This may be
	peculiar to the nslu2 (and other ixp4xx systems) where flash is
	assumed to be written in one endian-ness while the system is
	executing in the opposite endian-ness.
  
	* src/mach-ixp42x/variation-nslu2.c (variation_init): Variation
	now uses the fact that the power button is depressed (instead of
	the reset button).

	* src/lib/dump.c (dumpw): Fixed the printability check on dump so
	that we don't write non-ascii characters.

	* src/lib/env.c (env_check_magic): Streamlined the environment
	magic number check.

2007-01-06  Marc Singer  <elf@cerise.buici.com>

	* src/apex/env.c: Many more environment variables may be defined.

	* src/apex/cmd-boot.c (atag_commandline): boot command performs
	lookup of the default command line that allows for alternatives.

	* src/arch-arm/Kconfig: Reworking of the environment configuration
	section.  We now have options to set alternative kernel command
	line, kernel source region, and ramdisk region.  Default variation
	suffix is a config parameter.  The default startup command is more
	clearly controlled.

	* src/mach-ixp42x/variation-nslu2.c (variation_init): Added
	variation for nslu2.  Holding the reset button while booting will
	select the alternative boot and set the variation to the
	configured value.

	* src/apex/command.c (expand_variables): Added '-' to the list of